fixes bug in more info text
- when the modal is displayed, scrolling of the portfolio detail page is disabled now (introduces new lib `@uidotdev/usehooks`)
- if the more info text is too long it is being cut off instead of allowing for scrolling

--- a/src/components/imagemodal/ImageModal.css
+++ b/src/components/imagemodal/ImageModal.css
@@ -114,6 +114,10 @@
   z-index: 100;
   /* Ensure it's above other content */
   overflow-wrap: break-word;
+
+  overflow-y: auto;
+  max-height: 70vh;
+  padding-right: 10px;
 }
 
 .markdown-text p {
